--- a/project/example/index.html
+++ b/project/example/index.html
@@ -1118,11 +1118,11 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/publication/example/" >Complex Tax Incentives</a>
+      <a href="/publication/example-2/" >Complex Tax Incentives</a>
     </div>
 
     
-    <a href="/publication/example/"  class="summary-link">
+    <a href="/publication/example-2/"  class="summary-link">
       <div class="article-style">
         How does complexity affect people&rsquo;s reaction to tax changes? To answer this question, we conduct an experiment in which subjects …
       </div>
