--- a/index.html
+++ b/index.html
@@ -827,12 +827,12 @@
 <p>Before Joining MIT, I worked at the Institute on Behavior and Inequality (briq) as a postdoctoral researcher. My research focuses on labor, public, and behavioral economics. I combine experimental and quasi-experimental methods with large, administrative datasets to shed light on the functioning of labor markets and the origins and consequences of inequality.</p>
 <p>I received my PhD in economics from Harvard University.</p>
 <p>Here is my <a href="/uploads/CV_Simon_MIT.pdf" target="_blank">Full CV</a>.</p>
-<h1>Contact<h1> 
-<h3>email:<h3> sjaeger@mit.edu
-<h2>Address:<h2> MIT Department of Economics
-Morris and Sophie Chang Building
-50 Memorial Drive, Cambridge, MA 02142 (packages)
-77 Massachusetts Ave., Cambridge, MA 02139 (mail)
+<h1>Contact</h1> 
+<p><strong>email:</strong> <a href="mailto:sjaeger@mit.edu">sjaeger@mit.edu</a></p>
+<p><strong>Address:<strong> MIT Department of Economics<br>
+Morris and Sophie Chang Building <br>
+50 Memorial Drive, Cambridge, MA 02142 (packages)<br>
+77 Massachusetts Ave., Cambridge, MA 02139 (mail)</p>
 
     </div>
 
