--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
 <p>Here is my <a href="/uploads/CV_Simon_MIT.pdf" target="_blank">Full CV</a>.</p>
 <h1>Contact</h1> 
 <p><strong>email:</strong> <a href="mailto:sjaeger@mit.edu">sjaeger@mit.edu</a></p>
-<p><strong>Address:<strong> MIT Department of Economics<br>
+<p><strong>Address:</strong> MIT Department of Economics<br>
 Morris and Sophie Chang Building <br>
 50 Memorial Drive, Cambridge, MA 02142 (packages)<br>
 77 Massachusetts Ave., Cambridge, MA 02139 (mail)</p>
