--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -694,7 +694,7 @@
         
 
   <span >
-      Jorg Heining</span>, <span >
+      Jörg Heining</span>, <span >
       Simon Jäger</span>, <span >
       Benjamin Schoefer</span>
       </div>
@@ -848,7 +848,7 @@
       Simon Jäger</span>, <span >
       Benjamin Schoefer</span>, <span >
       Samuel Young</span>, <span >
-      Josef Zweimuller</span>
+      Josef Zweimüller</span>
       </div>
       
     </div>
