--- a/publication/index.html
+++ b/publication/index.html
@@ -761,7 +761,7 @@
   <span >
       Simon Jäger</span>, <span >
       Benjamin Schoefer</span>, <span >
-      Josef Zweimuller</span>
+      Josef Zweimüller</span>
   </span>
   (2021).
   <a href="/publication/jsz_2021/">Marginal Jobs and Job Surplus: A Test of the Efficiency of Separations</a>.
@@ -999,7 +999,7 @@
     
 
   <span >
-      Jorg Heining</span>, <span >
+      Jörg Heining</span>, <span >
       Simon Jäger</span>, <span >
       Benjamin Schoefer</span>
   </span>
@@ -1275,7 +1275,7 @@
       Simon Jäger</span>, <span >
       Benjamin Schoefer</span>, <span >
       Samuel Young</span>, <span >
-      Josef Zweimuller</span>
+      Josef Zweimüller</span>
   </span>
   (2020).
   <a href="/publication/jsyz_2020/">Wages and the Value of Nonemployment</a>.
@@ -1376,7 +1376,7 @@
     
 
   <span >
-      Jorg Heining</span>, <span >
+      Jörg Heining</span>, <span >
       Simon Jäger</span>
   </span>
   (2019).
