--- a/publication/jh_2019/index.html
+++ b/publication/jh_2019/index.html
@@ -335,7 +335,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Jorg Heining"
+    "name": "Jörg Heining"
   },
   
   "publisher": {
@@ -708,7 +708,7 @@
     
 
   <span >
-      Jorg Heining</span>, <span >
+      Jörg Heining</span>, <span >
       Simon Jäger</span>
   </div>
   
