--- a/publication/jhs_2021/index.html
+++ b/publication/jhs_2021/index.html
@@ -338,7 +338,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Jorg Heining"
+    "name": "Jörg Heining"
   },
   
   "publisher": {
@@ -711,7 +711,7 @@
     
 
   <span >
-      Jorg Heining</span>, <span >
+      Jörg Heining</span>, <span >
       Simon Jäger</span>, <span >
       Benjamin Schoefer</span>
   </div>
