--- a/publication/jsz_2021/index.html
+++ b/publication/jsz_2021/index.html
@@ -710,7 +710,7 @@
   <span >
       Simon Jäger</span>, <span >
       Benjamin Schoefer</span>, <span >
-      Josef Zweimuller</span>
+      Josef Zweimüller</span>
   </div>
   
   
