--- a/publication/jsyz_2020/index.html
+++ b/publication/jsyz_2020/index.html
@@ -714,7 +714,7 @@
       Simon Jäger</span>, <span >
       Benjamin Schoefer</span>, <span >
       Samuel Young</span>, <span >
-      Josef Zweimuller</span>
+      Josef Zweimüller</span>
   </div>
   
   
