--- a/index.html
+++ b/index.html
@@ -2177,7 +2177,7 @@ Morris and Sophie Chang Building <br>
     
     <a href="/publication/ja_2015/"  class="summary-link">
       <div class="article-style">
-        How does complexity affect people&rsquo;s reaction to tax changes? To answer this question, we conduct an experiment in which subjects …
+        <details> <summary>How does complexity affect people's reaction to tax changes?</summary> To answer this question, we conduct an experiment in which subjects work …</details>
       </div>
     </a>
     
