--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -1209,7 +1209,7 @@
     
     <a href="/publication/ja_2015/"  class="summary-link">
       <div class="article-style">
-        How does complexity affect people&rsquo;s reaction to tax changes? To answer this question, we conduct an experiment in which subjects …
+        <details> <summary>How does complexity affect people's reaction to tax changes?</summary> To answer this question, we conduct an experiment in which subjects work …</details>
       </div>
     </a>
     
