--- a/publication/index.html
+++ b/publication/index.html
@@ -962,9 +962,9 @@
     
 
   <span >
-      Jörg Heining</span>, <span >
       Simon Jäger</span>, <span >
-      Benjamin Schoefer</span>
+      Benjamin Schoefer</span>, <span >
+      Jörg Heining</span>
   </span>
   (2021).
   <a href="/publication/jhs_2021/">Labor in the Boardroom</a>.
