--- a/publication/jhs_2021/index.html
+++ b/publication/jhs_2021/index.html
@@ -338,7 +338,7 @@
   
   "author": {
     "@type": "Person",
-    "name": "Jörg Heining"
+    "name": "Simon Jäger"
   },
   
   "publisher": {
@@ -674,9 +674,9 @@
     
 
   <span >
-      Jörg Heining</span>, <span >
       Simon Jäger</span>, <span >
-      Benjamin Schoefer</span>
+      Benjamin Schoefer</span>, <span >
+      Jörg Heining</span>
   </div>
   
   
