--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
 <p>Before Joining MIT, I worked at the Institute on Behavior and Inequality (briq) as a postdoctoral researcher. My research focuses on labor, public, and behavioral economics. I combine experimental and quasi-experimental methods with large, administrative datasets to shed light on the functioning of labor markets and the origins and consequences of inequality.</p>
 <p>I received my PhD in economics from Harvard University.</p>
 <p>Here is my <a href="/uploads/CV_Simon_MIT.pdf" target="_blank">full CV</a>.</p>
-<h1>Contact</h1> 
+<h1 href="{{ .Site.BaseURL}}css/custom.css" rel="stylesheet">Contact</h1> 
 <p><strong>email:</strong> <a href="mailto:sjaeger@mit.edu">sjaeger@mit.edu</a></p>
 <p><strong>Address:</strong> MIT Department of Economics<br>
 Morris and Sophie Chang Building <br>
