--- a/index.html
+++ b/index.html
@@ -2129,7 +2129,7 @@ Morris and Sophie Chang Building <br>
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/publication/ja_2015/" >Complex Tax Incentives</a>
+      <a href="/publication/ja_2015/" >&lt;a href=&#34;https://stackoverflow.com/questions/1304465/how-to-prevent-css-inherit&#34;&gt;Complex Tax Incentives&lt;/a&gt;</a>
     </div>
 
     
