--- a/publication/index.html
+++ b/publication/index.html
@@ -1609,7 +1609,7 @@
       Simon Jäger</span>
   </span>
   (2015).
-  <a href="/publication/ja_2015/">Complex Tax Incentives</a>.
+  <a href="/publication/ja_2015/">&lt;a href=&#34;https://stackoverflow.com/questions/1304465/how-to-prevent-css-inherit&#34;&gt;Complex Tax Incentives&lt;/a&gt;</a>.
   In <em>American Economic Journal,Economic Policy Vol. 7 No. 3 August 2015</em>.
   
   <p>
