--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -629,12 +629,11 @@
 
 
 
-
 <div class="media stream-item">
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="" >3</a>
+      <a href="/publication-type/3/" >3</a>
     </div>
 
     
@@ -707,12 +706,11 @@
 
 
 
-
 <div class="media stream-item">
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="" >2</a>
+      <a href="/publication-type/2/" >2</a>
     </div>
 
     
