--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -629,11 +629,13 @@
 
 
 
+
+
 <div class="media stream-item">
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/publication-type/3/" >3</a>
+      <a href="" >3</a>
     </div>
 
     
@@ -706,11 +708,13 @@
 
 
 
+
+
 <div class="media stream-item">
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/publication-type/2/" >2</a>
+      <a href="" >2</a>
     </div>
 
     
