--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.d0e787d88d2b34a7738139681fc8a484.css" />
+  <link rel="stylesheet" href="/css/wowchemy.d42265f48fab6e50629cd571a3b4ede2.css" />
 
   
 
@@ -1322,7 +1322,7 @@ Morris and Sophie Chang Building <br>
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="http://economics.mit.edu/files/17273" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/static/uploads/CV_Simon_MIT.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
