--- a/publication/index.html
+++ b/publication/index.html
@@ -985,7 +985,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="/static/uploads/CV_Simon_MIT.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/uploads/CV_Simon_MIT.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
