--- a/publication/jhs_2021/index.html
+++ b/publication/jhs_2021/index.html
@@ -729,7 +729,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="/static/uploads/CV_Simon_MIT.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="/uploads/CV_Simon_MIT.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
