--- a/index.html
+++ b/index.html
@@ -1322,7 +1322,7 @@ Morris and Sophie Chang Building <br>
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="/static/uploads/CV_Simon_MIT.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/uploads/CV_Simon_MIT.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
