--- a/404.html
+++ b/404.html
@@ -514,7 +514,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/uploads/cv_simon_mit.pdf"><span>CV</span></a>
+          <a class="nav-link " href="/CV_Simon_MIT.pdf"><span>CV</span></a>
         </li>
 
         
