--- a/publication/jh_2019/index.html
+++ b/publication/jh_2019/index.html
@@ -563,7 +563,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/uploads/cv_simon_mit.pdf"><span>CV</span></a>
+          <a class="nav-link " href="/CV_Simon_MIT.pdf"><span>CV</span></a>
         </li>
 
         
