--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/uploads/cv_simon_mit.pdf/"><span>CV</span></a>
+          <a class="nav-link " href="/uploads/resume.pdf"><span>CV</span></a>
         </li>
 
         
@@ -787,7 +787,7 @@
       <p>I am an Assistant Professor of Economics at the Massachusetts Institute of Technology (MIT)</p>
 <p>Before Joining MIT, I worked at the Institute on Behavior and Inequality (briq) as a postdoctoral researcher. My research focuses on labor, public, and behavioral economics. I combine experimental and quasi-experimental methods with large, administrative datasets to shed light on the functioning of labor markets and the origins and consequences of inequality.</p>
 <p>I received my PhD in economics from Harvard University.</p>
-<p>Here is my <a href="/uploads/CV_Simon_MIT.pdf" target="_blank">full CV</a>.</p>
+<p>Here is my <a href="/uploads/resume.pdf" target="_blank">full CV</a>.</p>
 <h1 href="{{ .Site.BaseURL}}css/custom.css" rel="stylesheet">Contact</h1> 
 <p><strong>email:</strong> <a href="mailto:sjaeger@mit.edu">sjaeger@mit.edu</a></p>
 <p><strong>Address:</strong> MIT Department of Economics<br>
