--- a/index.html
+++ b/index.html
@@ -2149,7 +2149,8 @@ Morris and Sophie Chang Building <br>
 
   <span >
       Johannes Abeler</span>, <span >
-      Simon Jäger</span>
+      Simon Jäger</span>, <span >
+      &lt;br&gt; *American Economic Journal,Economic Policy Vol. 7 No. 3 August 2015*</span>
       </div>
       
     </div>
