--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -1181,7 +1181,8 @@
 
   <span >
       Johannes Abeler</span>, <span >
-      Simon Jäger</span>
+      Simon Jäger</span>, <span >
+      &lt;br&gt; *American Economic Journal,Economic Policy Vol. 7 No. 3 August 2015*</span>
       </div>
       
     </div>
