--- a/publication/index.html
+++ b/publication/index.html
@@ -1604,7 +1604,8 @@
 
   <span >
       Johannes Abeler</span>, <span >
-      Simon Jäger</span>
+      Simon Jäger</span>, <span >
+      &lt;br&gt; *American Economic Journal,Economic Policy Vol. 7 No. 3 August 2015*</span>
   </span>
   (2015).
   <a href="/publication/ja_2015/">Complex Tax Incentives</a>.
