--- a/index.html
+++ b/index.html
@@ -794,7 +794,8 @@
 Morris and Sophie Chang Building <br>
 50 Memorial Drive, Cambridge, MA 02142 (packages)<br>
 77 Massachusetts Ave., Cambridge, MA 02139 (mail)</p>
-
+<h1> Job openings </h1>
+<p>I am currently looking for a research assistant, please see the job ad posted <strong href="http://economics.mit.edu/files/19333/">here.</strong> <br> This is a temporary position with a starting date as soon as possible and an envisioned duration of several months with some flexibility in the exact duration and hours (part-time and full-time possible). The location of the position is remote. The position requires the candidate to be fully fluent in German. </p>
     </div>
 
     <div class="row">
