--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@ Morris and Sophie Chang Building <br>
 77 Massachusetts Ave., Cambridge, MA 02139 (mail)</p>
 <h1> Job openings </h1>
 <p>I am currently looking for a research assistant, please see the job ad posted <a href="/uploads/RA_ad_2021.pdf" target="_blank">here.</a> </p> 
-<p> This is a temporary position with a starting date as soon as possible and an envisioned duration of several months with some flexibility in the exact duration and hours (part-time and full-time possible). The location of the position is remote. The position requires the candidate to be fully fluent in German. </p>
+<p> This is a temporary position with a starting date <strong>as soon as possible</strong> and an envisioned duration of several months with some flexibility in the exact duration and hours <strong>(part-time and full-time possible)</strong>. The location of the position is <strong>remote</strong>. The position requires the candidate to be fully <strong>fluent in German</strong>. </p>
     </div>
 
     <div class="row">
